tasks: add first-class content support and content-first TUI
- Data model: add content_updated_at, content_format on Task
- Events: introduce content_set (metadata only)
- Store: setContent/readContent, content.md per task, maxContentBytes guard
- Tools: set_content tool; set_state no legacy names
- Resources: tasks://content/{id} returns text/markdown
- TUI: Enter opens content; t opens timeline; ESC closes; cleaned up UI
- Scripts: add migration to create content.md and append content_set
- Docs: README updates for new tool/resource and TUI keys

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "tui": "tsx src/tui.ts"
+    "tui": "tsx src/tui.ts",
+    "migrate:content": "node scripts/migrate-content.mjs"
   },
   "bin": {
     "mcp-task-server": "dist/index.js"
