--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "mcp-task-server",
-  "version": "0.1.0",
-  "private": true,
+  "name": "wind-task",
+  "version": "0.2.0",
   "type": "module",
   "description": "Minimal MCP server for file-backed tasks with TODO/ACTIVE/DONE and archive",
   "scripts": {
@@ -9,11 +8,18 @@
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "tui": "tsx src/tui.ts",
+    "tui:dist": "node dist/tui.js",
+    "prepublishOnly": "npm run build",
     "migrate:content": "node scripts/migrate-content.mjs"
   },
   "bin": {
+    "wind-task": "dist/index.js",
+    "wind-task-tui": "dist/tui.js",
     "mcp-task-server": "dist/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=18"
   },
